--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="row" id="links">
             <ul>
                 <a class="home_page" href="#">Home</a>
-                <a class="course_page" href="courses.html">Courses</a>
+                <a class="course_page" href="https://alh201.github.io/akiayah.github.io/courses.html">Courses</a>
             </ul>
             </div>
         </div>
