--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
             <h1>Akiaya's Personal Website</h1>
             <div class="row" id="links">
             <ul>
-                <a class="home_page" href="/index.html">Home</a>
-                <a class="course_page" href="/courses.html">Courses</a>
+                <a class="home_page" href="index.html">Home</a>
+                <a class="course_page" href="courses.html">Courses</a>
             </ul>
             </div>
         </div>
