--- a/courses.html
+++ b/courses.html
@@ -19,7 +19,7 @@
         <div class ="container-fluid">
             <h1>Akiaya's Personal Website</h1>
             <ul class="navbut">
-                <a class="home_page" href="/index.html">Home</a>
+                <a class="home_page" href="index.html">Home</a>
                 <a class="course_page" href="#">Courses</a>
             </ul>
         </div>
