--- a/courses.html
+++ b/courses.html
@@ -20,7 +20,7 @@
             <h1>Akiaya's Personal Website</h1>
             <ul class="navbut">
                 <a class="home_page" href="index.html">Home</a>
-                <a class="course_page" href="#">Courses</a>
+                <a class="course_page" href="courses.html">Courses</a>
             </ul>
         </div>
     </nav>
