--- a/courses.html
+++ b/courses.html
@@ -15,15 +15,19 @@
 </head>
 <body>
     
+    <!--Navigation Bar-->
     <nav class="navbar navbar-expand-bg" id="color" >
         <div class ="container-fluid">
             <h1>Akiaya's Personal Website</h1>
-            <ul class="navbut">
+            <div class="row" id="links">
+            <ul>
                 <a class="home_page" href="index.html">Home</a>
                 <a class="course_page" href="courses.html">Courses</a>
             </ul>
+            </div>
         </div>
     </nav>
+
 
     <div class="container-fluid">
         <div class="row">
