--- a/courses.html
+++ b/courses.html
@@ -140,7 +140,7 @@
         <div class="col" style="text-align: center; background-color: #F2F4E7;">
             <ul>
                 <a href="https://bulletins.wayne.edu/undergraduate/college-engineering/computer-science/information-technology-bs/#requirementstext"> 
-                    Wayne State University's Information on Courses </a>
+                    WSU Information on Courses </a>
             </ul>
         </div>
     </div>
