--- a/courses.html
+++ b/courses.html
@@ -95,7 +95,7 @@
                     </tr>
                     <tr>
                         <td>Coding Languages</td>
-                        <td>Python, Java, C++, HTML/CSS, Bootstrap, and C</td>
+                        <td>Python, Bash, SQL, JavaScript, HTML/CSS, Bootstrap, Java, C++, and C</td>
                     </tr>
                 </table>
             </div>
