--- a/courses.html
+++ b/courses.html
@@ -94,8 +94,8 @@
                             which can be accessed through their Open Ondemand portal. This is implemented on the Centos 7 Linux distribution..</td>
                     </tr>
                     <tr>
-                        <td>Coding Languages</td>
-                        <td>Python, Bash, SQL, JavaScript, HTML/CSS, Bootstrap, Java, C++, and C</td>
+                        <td>Additional Coding Language Courses</td>
+                        <td>Python,HTML/CSS, Bootstrap, Java, C++, and C</td>
                     </tr>
                 </table>
             </div>
