--- a/courses.html
+++ b/courses.html
@@ -94,7 +94,7 @@
                             which can be accessed through their Open Ondemand portal. This is implemented on the Centos 7 Linux distribution..</td>
                     </tr>
                     <tr>
-                        <td>Additional Coding Language Courses</td>
+                        <td>Additional Coding Courses</td>
                         <td>Python,HTML/CSS, Bootstrap, Java, C++, and C</td>
                     </tr>
                 </table>
